<resources>
    <string name="app_name">Kursach</string>
    <string name="mainpage_text">Главная</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="logo_1">Courses</string>
    <string name="logo_2">App</string>
    <string name="filter_icon">Sales</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">Программа обучения Джава – рассчитана
на новичков в данной сфере.

За программу вы изучите построение
графических приложений под ПК,
разработку веб сайтов на основе Java
Spring Boot, изучите построение
полноценных Андроид приложений
и отлично изучите сам язык Джава!</string>
</resources>